Full support of JWT authentification right from OpenAPI spec
